# NeuralTweak

./: .gitignore  README.md
semantic-search/: semantic-search-v1.ipynb  semantic-search-v2.ipynb
src/ai-assistant/: Dockerfile  pyproject.toml
src/ai-assistant/datastore/: factory.py
src/ai-assistant/server/: main.py
train/: simple-train-davinci.py
tranformers/: pdf-to-text.py
